test/files/neg/value-discard.check
value-discard.scala:6: warning: discarded non-Unit value of type Boolean
    mutable.Set[String]().remove("")   // warn because suspicious receiver
                                ^
value-discard.scala:13: warning: discarded non-Unit value of type scala.collection.mutable.Set[String]
  def subtract(): Unit = mutable.Set.empty[String].subtractOne("")     // warn because suspicious receiver
                                                              ^
value-discard.scala:34: warning: discarded non-Unit value of type Int
    case 42 => body           // warn
               ^
value-discard.scala:17: warning: a pure expression does nothing in statement position; multiline expressions might require enclosing parentheses
    ""                         // warn pure expr
    ^
error: No warnings can be incurred under -Werror.
4 warnings
1 error
